added base page methods and locators

--- a/configuration_data/conf.ini
+++ b/configuration_data/conf.ini
@@ -3,3 +3,34 @@ HomePageURL="https://www.edureka.co/"
 TestDataPath='..//excel/test_data.xlsx'
 test_register_sheet='register_data'
 test_login_sheet='login_data'
+
+[locators]
+HP_signup_btn_XPATH='//span[@class="signup_click signup-vd giTrackElementHeader "]'
+HP_login_btn_XPATH='//span[@class="login_click login-vd giTrackElementHeader "]'
+HP_loggedin_edureka_XPATH='//span[@class="webinar-profile-name"]'
+
+signupWin_email_XPATH='//input[@id="sg_popup_email"]'
+signupWin_phone_XPATH='//input[@id="sg_popup_phone_no"]'
+signupWin_btn_XPATH='//button[normalize-space()="Sign Up"]'
+signupWin_chkbx_XPATH='//input[@id="tc_agree"]'
+signupWin_email_err_XPATH='//p[@id="emailError"]'
+signupWin_phone_err_XPATH='//p[@id="phoneNoError"]'
+
+signupWin2_passw_XPATH='//input[@id="signup_password"]'
+signupWin2_btn_XPATH='//button[normalize-space()="Start Learning"]'
+
+login_win_email_XPATH='//input[@id="si_popup_email"]'
+login_win_pass_XPATH='//input[@id="si_popup_passwd"]'
+login_win_btn_XPATH='//button[normalize-space()="Login"]'
+login_win_email_err_XPATH='//p[@id="emailErrorr"]'
+login_win_pass_err_XPATH='//p[@id="passwdErrorr"]'
+
+[asserts]
+HP_loggedin_text='                  Edureka                '
+
+login_win_email_err_text='Enter Email address'
+login_win_pass_err_text='Enter Password'
+
+signupWin_email_err_text='Enter a valid Email address'
+signupWin_phone_err_text='Please enter a valid mobile number.'
+
