added test data, some more work on tests and pages methods

--- a/configuration_data/conf.ini
+++ b/configuration_data/conf.ini
@@ -3,8 +3,8 @@ HomePageURL="https://www.edureka.co/"
 TestDataPath='..//excel/test_data.xlsx'
 test_register_sheet='register_data'
 test_login_sheet='login_data'
-test_register_sheet_fail=
-test_login_sheet_fail=
+test_register_sheet_fail='register_data_fail'
+test_login_sheet_fail='login_data_fail'
 
 [locators]
 HP_signup_btn_XPATH='//span[@class="signup_click signup-vd giTrackElementHeader "]'
